--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,30 +1,18 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  // ion-content.signup-style {
+  //   background-size: cover;
+  //       --background: url(../../assets/login-fondo.jpg) 0 0/100% 100% no-repeat;
+  // }
+
+  ion-item {
+    --border-color: white; // default underline color
+    --highlight-color-invalid: red; // invalid underline color
+    --highlight-color-valid: #ffbc0488; // valid underline color
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-
-@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap'); 
+#somelement {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
+    }
