--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,12 +13,12 @@
 	--ion-color-primary-tint: #dbb32a;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+	--ion-color-secondary: #fbb000;
+	--ion-color-secondary-rgb: 251,176,0;
+	--ion-color-secondary-contrast: #000000;
+	--ion-color-secondary-contrast-rgb: 0,0,0;
+	--ion-color-secondary-shade: #dd9b00;
+	--ion-color-secondary-tint: #fbb81a;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
