canjear pagina lista operativa

--- a/src/app/canjear/canjear.page.scss
+++ b/src/app/canjear/canjear.page.scss
@@ -4,3 +4,13 @@
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
     }
+
+.clasegamarillo path{
+     cursor:pointer;
+    }
+.clasegamarillo :hover{
+  fill:#7c6924!important;
+  cursor: pointer;
+  stroke:#5d4c23 !important;
+ }
+
