--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -108,7 +108,7 @@
         <ion-row>
           <ion-col size="1">        </ion-col>
           <ion-col size="10">  
-              <ion-input  style="color:#efb23f; border: 1px solid var(--ion-color-primary);"  [(ngModel)]="registercorreo" placeholder="E-mail"></ion-input>
+              <ion-input  style="color:#efb23f; border: 1px solid var(--ion-color-primary);"  [(ngModel)]="nombre" placeholder="E-mail"></ion-input>
           </ion-col>
           <ion-col size="1">        </ion-col>
 
@@ -129,7 +129,7 @@
                 <ion-row>
                   <ion-col size="12"> 
  
-                      <ion-select  placeholder="Seleccione su País" (ionChange)="ONCHANGEPAIS($event)" >
+                      <ion-select  placeholder="Seleccione su País" (ionBlur)="ONCHANGEPAIS($event)" (ionFocus)="ONCHANGEPAIS($event)" (ionChange)="ONCHANGEPAIS($event)" >
                         <ion-select-option style="color:#efb23f; " value="{{i}}" *ngFor="let c of countryData; let i = index;">{{c.name}}</ion-select-option>
                 </ion-select>
                 </ion-col>
