--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -108,7 +108,7 @@
         <ion-row>
           <ion-col size="1">        </ion-col>
           <ion-col size="10">  
-              <ion-input  style="color:#efb23f; border: 1px solid var(--ion-color-primary);"  [(ngModel)]="nombre" placeholder="E-mail"></ion-input>
+              <ion-input  style="color:#efb23f; border: 1px solid var(--ion-color-primary);"  [(ngModel)]="registercorreo" placeholder="E-mail"></ion-input>
           </ion-col>
           <ion-col size="1">        </ion-col>
 
