--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app (click)="SeClickeoEnLaApp()">
+  <ion-router-outlet (activate)="onActivateRoute($event)" ></ion-router-outlet>
 </ion-app>
